tests/pos/i7986.scala
case class Project(name: String)
def (name: String) dependencies: String = ???
def (project: Project) dependencies: String = project.name.dependencies
